Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8443

Can't create Lustre FS with enabled meta_bg option

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.9.0
    • None
    • 3
    • 9223372036854775807

      [root@devvm-sl6-1 MRP-3473]# mkfs.lustre --ost --fsname=testfs --mountfsoptions='meta_bg' --mkfsoptions="-O meta_bg,^resize_inode" --reformat --index=0 --mgsnode=172.0.0.1 /dev/sdb1
      mkfs.lustre: Warning: default mount option `errors=remount-ro' is missing

      Permanent disk data:
      Target: testfs:OST0000
      Index: 0
      Lustre FS: testfs
      Mount type: ldiskfs
      Flags: 0x62
      (OST first_time update )
      Persistent mount opts: meta_bg
      Parameters: mgsnode=172.0.0.1@tcp

      device size = 2046MB
      formatting backing filesystem ldiskfs on /dev/sdb1
      target name testfs:OST0000
      4k blocks 523915
      options -J size=81 -I 256 -q -O meta_bg,^resize_inode,extents,uninit_bg,dir_nlink,quota,huge_file,flex_bg -G 256 -E resize=4290772992,lazy_journal_init,lazy_itable_init=0 -F
      mkfs_cmd = mke2fs -j -b 4096 -L testfs:OST0000 -J size=81 -I 256 -q -O meta_bg,^resize_inode,extents,uninit_bg,dir_nlink,quota,huge_file,flex_bg -G 256 -E resize=4290772992,lazy_journal_init,lazy_itable_init=0 -F /dev/sdb1 523915
      mkfs.lustre: Can't make configs dir /tmp/mntWBthZy/CONFIGS (Input/output error)

      Message from syslogd@devvm-sl6-1 at Jun 30 14:00:49 ...
      kernel:journal commit I/O error

      mkfs.lustre FATAL: failed to write local files
      mkfs.lustre: exiting with -1 (Unknown error 18446744073709551615)

            jhammond John Hammond
            artem_blagodarenko Artem Blagodarenko (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: